--- a/exo-6/style.css
+++ b/exo-6/style.css
@@ -1,11 +1,35 @@
-#conteneur {
+.conteneur {
     display: flex;
     width: 100%;
-    height: 300px;
+    height: 75px;
     flex-wrap: wrap;
     align-content: flex-start;
+    align-self: flex-start;
 }
 
+.conteneur_2 {
+    display: flex;
+    width: 100%;
+    height: 150px;
+    justify-content: flex-start;
+    align-self: center;
+}
+
+.conteneur_3 {
+    display: flex;
+    width: 100%;
+    height: 75px;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.conteneur_4 {
+    display: flex;
+    background-color: darkblue;
+    width: 100%;
+    height: 75px; 
+    align-self: flex-end;
+}
 .element-vert {
     background-color: mediumseagreen;
     width: 70%;
